2009-11-17  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by Timothy Hatcher.

        Fixed typos in comments.

        * Scripts/modules/committers.py:

2009-11-17  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Make DRT show web inspector for tests in inspector/ folder.
        - Updated DRT to show/close inspector for all tests under /inspector
        - Introduced LayoutTestController::setTimelineProfilingEnabled and
          WebInspector::setTimelineProfilingEnabled beside setJavaScriptProfilingEnabled
        - Removed reload on each inspector test
        - Renamed fast/inspector to fast/inspector-support in order not to trigger
        inspector for those.
        - Reimplemented timeline tests in order to get rid of reload there.
        - Moved tests that don't require harness into the fast group.

        https://bugs.webkit.org/show_bug.cgi?id=31472

        * DumpRenderTree/LayoutTestController.cpp:
        (setTimelineProfilingEnabledCallback):
        (closeWebInspectorCallback):
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (shouldOpenWebInspector):
        (runTest):
        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::setTimelineProfilingEnabled):
        * DumpRenderTree/mac/DumpRenderTree.mm:
        (shouldOpenWebInspector):
        (runTest):
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::setTimelineProfilingEnabled):
        * DumpRenderTree/win/DumpRenderTree.cpp:
        (shouldOpenWebInspector):
        (runTest):
        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::setTimelineProfilingEnabled):

2009-11-17  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.

        Incorrect use of JavaScriptCore API in DumpRenderTree